# scrapebiblio

./: .env.example  .gitignore  CHANGELOG.md  README.MD  README.md  biblio.py  main.py  pyproject.toml  readme.md  references.md  requirements.txt  temp_output.md
biblio/: __init__.py  check_reference_with_scrapegraph.py  convert_to_md.py  extract_references.py  extract_text_from_pdf.py  find_reference.py  pipeline.py  save_reference.py  search_in_semantic_scholar.py  split_text.py
biblio/utils/: __init__.py  openai_utils.py  pdf_utils.py  read.py  reference_utils.py  text_utils.py
example/: biblio.py  convert_and_read.py  convert_array.py  convert_to_md_example.py  example1.py  find_reference_example.py  references.md
example/results/: converted_file.md  references.md
examples/: convert_and_read.py  convert_to_md_example.py  convert_to_md_example_openai.py  converted_file.md  find_reference_example.py  find_reference_example_openai.py
scrapebiblio/: __init__.py  convert_to_md.py  find_reference.py
scrapebiblio/utils/: convert_from_pdf_image_format.py  openai_utils.py  pdf_utils.py
src/core/: pdf_processor.py
src/models/: api_config.py
src/services/: reference_service.py
